--- a/HomePage.html
+++ b/HomePage.html
@@ -128,7 +128,7 @@ body, html {
       <p><a href="#team" class="w3-button w3-black"><i class="fa fa-th"></i> View Our Works</a></p>
     </div>
     <div class="w3-col m6">
-      <img class="w3-image w3-round-large" src="/aaaa.jpg" alt="Buildings" width="700" height="394">
+      <img class="w3-image w3-round-large" src="aaaa.jpg" alt="Buildings" width="700" height="394">
     </div>
   </div>
 </div>
@@ -149,7 +149,7 @@ body, html {
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="/Alula.jpg" class="resizable-image" alt="John" style="width:100%">
+        <img src="Alula.jpg" class="resizable-image" alt="John" style="width:100%">
         <div class="w3-container">
           <h3 style="text-align: center;">AL-ULA</h3>
           <p><a href="Al-ula.html" class="w3-button w3-light-grey w3-block" style="font-size: 22px;"><i class="fa fa-external-link" style="font-size: 22px;"></i>     VISIT</a></p>
@@ -158,7 +158,7 @@ body, html {
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="/jeeed.jpg" class="resizable-image" alt="John" style="width:100%">
+        <img src="jeeed.jpg" class="resizable-image" alt="John" style="width:100%">
         <div class="w3-container">
           <h3 style="text-align: center;">JEDDAH</h3>
           <p><a href="Jeddah.html" class="w3-button w3-light-grey w3-block" style="font-size: 22px;"><i class="fa fa-external-link" style="font-size: 22px;"></i>     VISIT</a></p>
@@ -167,7 +167,7 @@ body, html {
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="/abha.jpg" class="resizable-image" alt="John" style="width:100%">
+        <img src="abha.jpg" class="resizable-image" alt="John" style="width:100%">
         <div class="w3-container">
           <h3 style="text-align: center;">ABHA</h3>
           <p><a href="Abha.html" class="w3-button w3-light-grey w3-block" style="font-size: 22px;"><i class="fa fa-external-link" style="font-size: 22px;"></i>     VISIT</a></p>
@@ -204,31 +204,31 @@ body, html {
 
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
-      <img src="/9.jpg" class="resizable-image" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
+      <img src="9.jpg" class="resizable-image" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
     </div>
     <div class="w3-col l3 m6">
-      <img src="/99.jpg" class="resizable-image" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
+      <img src="99.jpg" class="resizable-image" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
     </div>
     <div class="w3-col l3 m6">
-      <img src="/7.jpg" class="resizable-image" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
+      <img src="7.jpg" class="resizable-image" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
     </div>
     <div class="w3-col l3 m6">
-      <img src="/8.jpg" class="resizable-image" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
+      <img src="8.jpg" class="resizable-image" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
     </div>
   </div>
 
   <div class="w3-row-padding w3-section">
     <div class="w3-col l3 m6">
-      <img src="/6.jpg" class="resizable-image" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
+      <img src="6.jpg" class="resizable-image" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
     </div>
     <div class="w3-col l3 m6">
-      <img src="/77.jpg" class="resizable-image" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
+      <img src="77.jpg" class="resizable-image" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
     </div>
     <div class="w3-col l3 m6">
-      <img src="/3.jpg" class="resizable-image" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
+      <img src="3.jpg" class="resizable-image" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
     </div>
     <div class="w3-col l3 m6">
-      <img src="/TT.jpg" class="resizable-image" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
+      <img src="TT.jpg" class="resizable-image" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
     </div>
   </div>
 </div>
@@ -278,7 +278,7 @@ body, html {
     <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +00 151515</p>
     <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: mail@mail.com</p>
     <br>
-    <form action="/action_page.php" target="_blank">
+    <form action="action_page.php" target="_blank">
       <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="Name"></p>
       <p><input class="w3-input w3-border" type="text" placeholder="Email" required name="Email"></p>
       <p><input class="w3-input w3-border" type="text" placeholder="Subject" required name="Subject"></p>
